--- a/test.html
+++ b/test.html
@@ -1,1 +1,59 @@
-<h1>Hi GitHub</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Hi GitHub</h1>
+<p>
+  Hello my friends, Today I am going to talk to you about birthday celebrations
+  between the past and present.
+</p>
+The cake, the candles, the presents, and the song all changed over time to
+create today’s celebration.
+<p>
+  In the old days, birthdays were only celebrated kings and queens. In the past,
+  birthdays invitations were sent by mail or by home phones, while now
+  invitations can be sent via emails, mobile phones calls or messages.
+</p>
+
+<p>
+  In the past, birthdays were usually celebrated at homes but now With more busy
+  working women, parties can be celebrated at home, mcdonalds or playgrounds.
+  </p>
+  <p>
+      With industrial evolution , more coloured fabrics allowed the production of
+  beautiful party decorations which were not available in the past. 
+  </p>
+  <p>
+Birthday
+  cakes in the past were simple and had one candle for each year. Nowadays cakes
+  can be themed with fancy colourful icing.
+  </p>
+  <p>
+Birthday photos in the past were
+  black and white, nowadays photos are taken by mobile phones and are colored
+  </p>
+  <p>
+      presents in the past were wooden toys or stuffed toys while nowadays there are
+  battery and electric toys
+  </p>
+   <p>
+The birthday song was wrote by school teachers wrote
+  and was “Good Morning To All”, the song changed overtime and became the famous
+  “happy birthday to you” song In the end,
+   </p>
+   <p>
+birthday celebration may be different
+  from time to time but at all times, birthday is a chance to family and friends
+  to come together to celebrate, sing and eat delicious cakes.
+   </p>
+    I hope you
+  enjoyed my speech Thank you
+</p>
+</body>
+</html>
+
