Add new heading to index.html file.

--- a/test.html
+++ b/test.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hi GitHub</h1>
+    <h2>This is the time to practice again with git.</h2>
 <p>
   Hello my friends, Today I am going to talk to you about birthday celebrations
   between the past and present.
@@ -26,7 +27,7 @@ create today’s celebration.
   </p>
   <p>
       With industrial evolution , more coloured fabrics allowed the production of
-  beautiful party decorations which were not available in the past. 
+  beautiful party decorations which were not available in the past.
   </p>
   <p>
 Birthday
